Simplify code by using Java 10 APIs (#3216)